fixed color issue on small header of admissions

--- a/css/second-level/admissions.css
+++ b/css/second-level/admissions.css
@@ -46,6 +46,7 @@ section.admissions-promo-wrapper .wrapper {
 .admissions-promo-wrapper h2 .smaller {
     font-size: 1.3em;
     display: block;
+    color: #fff;
 }
 
 .admissions-promo-wrapper h2 .larger {
